--- a/pagina.html
+++ b/pagina.html
@@ -6,7 +6,7 @@
 <body>
 
 <p>Este es un cambio urgente</p>
-
+<p>Otro párrafo para el remoto</p>
 <p>Este es una línea</p>
 <img src="images/leon.jpg" width="400">
 <img src="images/tigre.jpg" width="400">
